--- a/src/com/foo/address/view/PersonOverview.fxml
+++ b/src/com/foo/address/view/PersonOverview.fxml
@@ -61,8 +61,8 @@
                   </GridPane>
                   <ButtonBar layoutX="131.0" layoutY="544.0" prefHeight="40.0" prefWidth="221.0" AnchorPane.bottomAnchor="5.0" AnchorPane.rightAnchor="5.0">
                     <buttons>
-                      <Button mnemonicParsing="false" text="New..." />
-                        <Button mnemonicParsing="false" text="Edit..." />
+                      <Button mnemonicParsing="false" onAction="#handleNewPerson" text="New..." />
+                        <Button mnemonicParsing="false" onAction="#handleEditPerson" text="Edit..." />
                         <Button mnemonicParsing="false" onAction="#handleDeletePerson" text="Delete" />
                     </buttons>
                   </ButtonBar>
